--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -89,7 +89,7 @@ button {
     transition: color 0.3s ease-in;
   }
 
-  svg {
+  &__logo svg {
     width: 3rem;
     height: 3rem;
     color: $dark-color;
