--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -60,6 +60,16 @@ $grey-filter: brightness(0) saturate(100%) invert(44%) sepia(1%) saturate(1985%)
 $purple-filter: brightness(0) saturate(100%) invert(64%) sepia(71%) saturate(2593%) hue-rotate(224deg) brightness(96%) contrast(104%);
 $white-filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(5596%) hue-rotate(298deg) brightness(112%) contrast(91%);
 
+// BREAKPOINTS
+
+$small: 640px;
+$medium: 768px;
+$large: 1024px;
+$x-large: 1280px;
+$xx-large: 1536px;
+
+// STYLE
+
 body {
   margin: 0;
   font-family: $duru-regular;
@@ -71,6 +81,11 @@ button {
   border: none;
   background: none;
   padding: 0;
+}
+
+.preload * {
+  transition: none !important;
+  animation: none !important;
 }
 
 .header {
@@ -97,51 +112,19 @@ button {
   }
 }
 
+
 .menu {
-  position: absolute;
-  display: none;
-  top: -0.5rem;
-  right: -0.5rem;
-  flex-direction: column;
-  justify-content: center;
-  align-items: start;
-  background-color: $dark-color;
-  padding: 1rem 2rem 1rem 0.5rem;
-
-  &--active {
-    display: flex;
+  &__content {
+    position: absolute;
+    display: none;
+    top: -0.5rem;
+    right: -0.5rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    background-color: $dark-color;
+    padding: 1rem 2rem 1rem 0.5rem;
   }
-
-  &--close {
-    animation: 0.3s ease-in-out 0s forwards opening-menu-close;
-  }
-
-  &--open {
-    animation: 0.3s ease-in-out 0s forwards opening-menu-open;
-  }
-
-  @keyframes opening-menu-open {
-    from {
-      transform: scale(0);
-      transform-origin: top right;
-    }
-    to {
-      transform: scale(1);
-      transform-origin: top right;
-    }
-  }
-
-  @keyframes opening-menu-close {
-    from {
-      transform: scale(1);
-      transform-origin: top right;
-    }
-    to {
-      transform: scale(0);
-      transform-origin: top right;
-    }
-  }
-
 
   &__list {
     list-style: none;
@@ -223,22 +206,71 @@ button {
     }
   }
 
-  &__button-line-top {
+  &__button-lines div {
     height: 0.1875rem;
     width: 2rem;
     margin-top: 0.25rem;
     margin-bottom: 0.25rem;
     background-color: $dark-color;
+  }
 
-    &--close {
-      animation: 0.3s ease-in-out 0s menu-button-line-top-out;
+  &--active {
+    .menu__content {
+      display: flex;
+    }
+  }
+
+  &--close {
+    .menu__content {
+      animation: 0.3s ease-in-out 0s forwards opening-menu-close;
     }
 
-    &--open {
+    @keyframes opening-menu-close {
+      from {
+        transform: scale(1);
+        transform-origin: top right;
+      }
+      to {
+        transform: scale(0);
+        transform-origin: top right;
+      }
+    }
+  }
+
+  &--open {
+    .menu__content {
+      animation: 0.3s ease-in-out 0s forwards opening-menu-open;
+    }
+
+    .menu__button-line-top {
       transform: translateY(0.6875rem) rotate(45deg);
       transform-origin: center;
       background-color: $green-color;
       animation: 0.3s ease-in-out 0s menu-button-line-top-in;
+    }
+
+    .menu__button-line-middle {
+      opacity: 0;
+      background-color: $green-color;
+      animation: 0.3s ease-in-out 0s menu-button-line-middle-in;
+    }
+
+    .menu__button-line-bottom {
+      transform: translateY(-0.6875rem) rotate(-45deg);
+      transform-origin: center;
+      background-color: $green-color;
+      animation: 0.3s ease-in-out 0s menu-button-line-bottom-in;
+    }
+
+    @keyframes opening-menu-open {
+      from {
+        transform: scale(0);
+        transform-origin: top right;
+      }
+      to {
+        transform: scale(1);
+        transform-origin: top right;
+      }
     }
 
     @keyframes menu-button-line-top-in {
@@ -256,39 +288,6 @@ button {
       }
     }
 
-    @keyframes menu-button-line-top-out {
-      from {
-        transform: translateY(0.6875rem) rotate(45deg);
-        transform-origin: center;
-        background-color: $green-color;
-      }
-      50% {
-        transform: translateY(0.6875rem);
-      }
-      to {
-        transform: none;
-        background-color: $dark-color;
-      }
-    }
-  }
-
-  &__button-line-middle {
-    height: 0.1875rem;
-    width: 2rem;
-    margin-top: 0.25rem;
-    margin-bottom: 0.25rem;
-    background-color: $dark-color;
-
-    &--close {
-      animation: 0.3s ease-in-out 0s menu-button-line-middle-out;
-    }
-
-    &--open {
-      opacity: 0;
-      background-color: $green-color;
-      animation: 0.3s ease-in-out 0s menu-button-line-middle-in;
-    }
-
     @keyframes menu-button-line-middle-in {
       from {
         opacity: 1;
@@ -298,36 +297,6 @@ button {
         opacity: 0;
         background-color: $green-color;
       }
-    }
-
-    @keyframes menu-button-line-middle-out {
-      from {
-        opacity: 0;
-        background-color: $green-color;
-      }
-      to {
-        opacity: 1;
-        background-color: $dark-color;
-      }
-    }
-  }
-
-  &__button-line-bottom {
-    height: 0.1875rem;
-    width: 2rem;
-    margin-top: 0.25rem;
-    margin-bottom: 0.25rem;
-    background-color: $dark-color;
-
-    &--close {
-      animation: 0.3s ease-in-out 0s menu-button-line-bottom-out;
-    }
-
-    &--open {
-      transform: translateY(-0.6875rem) rotate(-45deg);
-      transform-origin: center;
-      background-color: $green-color;
-      animation: 0.3s ease-in-out 0s menu-button-line-bottom-in;
     }
 
     @keyframes menu-button-line-bottom-in {
@@ -342,6 +311,47 @@ button {
         transform: translateY(-0.6875rem) rotate(-45deg);
         transform-origin: center;
         background-color: $green-color;
+      }
+    }
+  }
+
+  &--closed {
+    .menu__button-line-top {
+      animation: 0.3s ease-in-out 0s menu-button-line-top-out;
+    }
+
+    .menu__button-line-middle {
+      animation: 0.3s ease-in-out 0s menu-button-line-middle-out;
+    }
+
+    .menu__button-line-bottom {
+      animation: 0.3s ease-in-out 0s menu-button-line-bottom-out;
+    }
+
+
+    @keyframes menu-button-line-top-out {
+      from {
+        transform: translateY(0.6875rem) rotate(45deg);
+        transform-origin: center;
+        background-color: $green-color;
+      }
+      50% {
+        transform: translateY(0.6875rem);
+      }
+      to {
+        transform: none;
+        background-color: $dark-color;
+      }
+    }
+
+    @keyframes menu-button-line-middle-out {
+      from {
+        opacity: 0;
+        background-color: $green-color;
+      }
+      to {
+        opacity: 1;
+        background-color: $dark-color;
       }
     }
 
@@ -361,6 +371,7 @@ button {
     }
   }
 }
+
 
 .mode {
   padding: 0 1rem 0 2rem;
