fix footer style in medium+

--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -443,7 +443,7 @@ button {
       display: inline-block;
       width: 100%;
       height: 100%;
-      padding: 0.5rem;
+      padding: 0.25rem 0.5rem 0 0.5rem;
       margin: 0 0.5rem;
 
       svg {
@@ -544,6 +544,7 @@ button {
   .footer {
     flex-direction: row;
     justify-content: space-between;
+    align-items: end;
     margin: 1rem 1.5rem;
     font-size: 0.875rem;
 
