add Hexagon-1.svg as body background-image

--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -75,6 +75,8 @@ body {
   font-family: $duru-regular;
   color: $dark-color;
   background-color: $green-color;
+  background-image: url("../svg/Hexagon-1.svg");
+  background-repeat: no-repeat;
 }
 
 button {
