--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -77,6 +77,7 @@ body {
   background-color: $green-color;
   background-image: url("../svg/Hexagon-1.svg");
   background-repeat: no-repeat;
+  cursor: none;
 }
 
 button {
@@ -461,6 +462,26 @@ button {
           transition: color 0.2s ease-in;
         }
       }
+    }
+  }
+}
+
+.cursor {
+  pointer-events: none;
+
+  &__ball {
+    position: fixed;
+    top: 0;
+    left: 0;
+    mix-blend-mode: overlay;
+    z-index: 100;
+
+    &--big {
+      color: #464A4E;
+    }
+
+    &--small {
+      color: #000;
     }
   }
 }
