--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -478,15 +478,15 @@ a {
     position: fixed;
     top: 0;
     left: 0;
-    mix-blend-mode: overlay;
+    mix-blend-mode: hard-light;
     z-index: 100;
 
     &--big {
-      color: #464A4E;
+      color: #464A4E22;
     }
 
     &--small {
-      color: #000;
+      color: $dark-color;
     }
   }
 }
