--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -496,7 +496,65 @@ a {
   }
 }
 
-// MEDIA QUERIES
+// HOME
+
+.home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  text-align: center;
+  text-transform: uppercase;
+
+  &__title {
+    font-family: $karla-bold;
+    font-size: 2.25rem;
+    color: $grey-color;
+  }
+
+  &__subtitle {
+    font-family: $ruda-bold;
+    font-size: 1.25rem;
+    margin: 0;
+  }
+
+  &__social {
+    margin: 1rem;
+  }
+
+  &__resume {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 110px;
+    margin: 1rem;
+
+    a {
+      position: absolute;
+      color: $dark-color;
+      transition: color 0.2s ease-in;
+
+      &:hover {
+        color: $purple-color;
+        transition: color 0.2s ease-in;
+      }
+    }
+
+    &--link-hover {
+      color: $purple-color;
+      transition: color 0.3s ease-in;
+    }
+
+    svg {
+      width: 100px;
+      height: 100px;
+    }
+  }
+}
+
+// -- MEDIA QUERIES -- //
 
 // MEDIA QUERY - MEDIUM
 
