--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -75,7 +75,7 @@ body {
   font-family: $duru-regular;
   color: $dark-color;
   background-color: $green-color;
-  background-image: url("../svg/Hexagon-1.svg");
+  background-image: url("../svg/hexagon-1.svg");
   background-repeat: no-repeat;
   cursor: none;
 }
