add more margin bottom to footer on small screen

--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -444,7 +444,7 @@ ul {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0.5rem;
+  margin: 0.75rem 0.5rem;
 
   &__contact {
     order: 1;
