add conditionally footer version for homepage

--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -668,6 +668,10 @@ ul {
     margin: 1rem 1.5rem;
     font-size: 0.875rem;
 
+    &--home {
+      justify-content: center;
+    }
+
     &__contact {
       order: 1;
     }
