fix height app size on different pages

--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -105,7 +105,10 @@ ul {
 .app {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+
+  &--home {
+    height: 100vh;
+  }
 }
 
 // HEADER
