--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -539,12 +539,13 @@ ul {
     font-family: $karla-bold;
     font-size: 2.25rem;
     color: $grey-color;
+    margin: 1.5rem 1rem;
   }
 
   &__subtitle {
     font-family: $ruda-bold;
     font-size: 1.25rem;
-    margin: 0;
+    margin: 0 1rem;
   }
 
   &__social {
@@ -561,6 +562,7 @@ ul {
   position: relative;
   width: 110px;
   margin: 1rem;
+  transition: color 0.3s ease-in;
 
   a {
     position: absolute;
