--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -106,8 +106,8 @@ ul {
   display: flex;
   flex-direction: column;
 
-  &--home {
-    height: 100vh;
+  &--screen {
+    min-height: 100vh;
   }
 }
 
@@ -644,6 +644,64 @@ ul {
       img {
         width: 45px;
         height: 45px;
+      }
+    }
+  }
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+
+
+  &__title {
+    font-family: $karla-bold;
+    font-size: 2.25rem;
+    text-transform: uppercase;
+    margin: 1.5rem 1rem;
+  }
+
+  &__infos {
+    margin: 0.5rem 1rem;
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+
+    input, textarea {
+      font-family: $duru-regular;
+      font-size: 1rem;
+      color: $dark-color;
+      background: none;
+      padding: 0.5rem 1rem;
+      border: thin solid $grey-color;
+      margin: 1rem;
+
+      &[type="submit"] {
+        text-transform: uppercase;
+        background-color: $white-color;
+        padding: 0.75rem 1rem;
+        transition: all 0.2s ease-in;
+        cursor: none;
+
+        &:hover {
+          color: $purple-color;
+          border: 0.125rem solid $purple-color;
+          margin-top: 0.875rem;
+          transition: all 0.2s ease-in;
+        }
+
+        &:focus-visible {
+          color: $purple-color;
+          border: 0.125rem solid $purple-color;
+          margin-top: 0.875rem;
+          transition: all 0.2s ease-in;
+        }
       }
     }
   }
