--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -581,7 +581,7 @@ ul {
     }
   }
 
-  &--link-hover {
+  &:has(> a:hover), &:has(> a:focus-visible) {
     color: $purple-color;
     transition: color 0.3s ease-in;
   }
