add style to Project component

--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -217,6 +217,7 @@ ul {
     height: 3rem;
     color: $dark-color;
     transition: color 0.2s ease-in;
+    z-index: 20;
 
     &:hover, &:focus-visible {
       cursor: none;
@@ -796,7 +797,7 @@ ul {
       left: -0.25rem;
       right: -0.25rem;
       bottom: -0.25rem;
-      background: $dark-color; // Transparent background to let the border show
+      background: $dark-color;
       mask-image: url("../svg/polygon.svg");
       -webkit-mask-image: url("../svg/polygon.svg");
       mask-repeat: no-repeat;
@@ -834,6 +835,77 @@ ul {
       transform: scale(125%);
       transition: all 0.2s ease-in;
     }
+  }
+}
+
+// PROJECT
+
+.project {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 4rem 0;
+  margin: auto;
+
+  &__images {
+    position: relative;
+    display: inline-block;
+    margin: 0 0.5rem;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: -0.25rem;
+      left: -0.25rem;
+      right: -0.25rem;
+      bottom: -0.25rem;
+      background: $dark-color;
+      mask-image: url("../svg/polygon.svg");
+      -webkit-mask-image: url("../svg/polygon.svg");
+      mask-repeat: no-repeat;
+      -webkit-mask-repeat: no-repeat;
+      mask-size: cover;
+      -webkit-mask-size: contain;
+    }
+  }
+
+  &__mask {
+    mask-image: url("../svg/polygon.svg");
+    -webkit-mask-image: url("../svg/polygon.svg");
+    mask-repeat: no-repeat;
+    -webkit-mask-repeat: no-repeat;
+    mask-size: cover;
+    -webkit-mask-size: contain;
+  }
+
+  &__img {
+    width: 18rem;
+    height: 18rem;
+  }
+
+  &__content {
+    margin: 0 1rem;
+  }
+
+  &__title {
+    font-family: $karla-bold;
+    font-size: 2.25rem;
+    text-transform: uppercase;
+    margin: 0.5rem 1rem;
+  }
+
+  &__text {
+
+  }
+
+  &__skills, &__links {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -877,6 +949,13 @@ ul {
     &__img {
       width: 14rem;
       height: 14rem;
+    }
+  }
+
+  .project {
+    &__img {
+      width: 22rem;
+      height: 22rem;
     }
   }
 }
@@ -1027,6 +1106,13 @@ ul {
       height: 12rem;
     }
   }
+
+  .project {
+    &__img {
+      width: 26rem;
+      height: 26rem;
+    }
+  }
 }
 
 // MEDIA QUERY - LARGE (1024p)
@@ -1072,6 +1158,51 @@ ul {
     &__img {
       width: 14rem;
       height: 14rem;
+    }
+  }
+
+  .project {
+    flex-direction: row;
+    text-align: start;
+
+    &__images {
+      margin: 0 1rem 0 2rem;
+    }
+
+    &__img {
+      width: 28rem;
+      height: 28rem;
+    }
+
+    &__content {
+      max-width: 38rem;
+      margin: 0 3rem 0 1rem;
+    }
+
+    &__title {
+      margin: 0.5rem 0;
+    }
+
+    &__skills, &__links {
+      justify-content: start;
+    }
+  }
+}
+
+@media all and (min-width: $x-large) {
+  .project {
+    &__images {
+      margin: 0 2rem 0 2rem;
+    }
+
+    &__img {
+      width: 32rem;
+      height: 32rem;
+    }
+
+    &__content {
+      max-width: 42rem;
+      margin: 0 3rem 0 2rem;
     }
   }
 }
